# mx-sdk-rs-0.31.1-versions-changed

./: CHANGELOG.md  Cargo.toml  README.md  publish.sh  vm-test-build-copy.sh
contracts/benchmarks/mappers/single-value-repeat/meta/: Cargo.toml
contracts/feature-tests/composability/forwarder/: Cargo.toml
contracts/feature-tests/composability/forwarder/interaction/: snippets.sh
contracts/feature-tests/composability/forwarder/meta/: Cargo.toml
contracts/feature-tests/composability/forwarder/src/: call_async.rs  call_sync.rs  call_transf_exec.rs  dct.rs  forwarder_main.rs  nft.rs  sft.rs
contracts/feature-tests/composability/forwarder/wasm/: Cargo.toml
contracts/feature-tests/composability/forwarder/wasm-no-managed-ei/: Cargo.toml
contracts/feature-tests/composability/forwarder/wasm/src/: lib.rs
contracts/feature-tests/composability/proxy-test-second/: Cargo.toml
contracts/feature-tests/composability/proxy-test-second/meta/: Cargo.toml
contracts/feature-tests/composability/proxy-test-second/src/: proxy-test-second.rs
contracts/feature-tests/composability/proxy-test-second/wasm/: Cargo.toml
contracts/feature-tests/composability/proxy-test-second/wasm-no-managed-ei/: Cargo.toml
contracts/feature-tests/multi-contract-features/meta/: Cargo.toml
denali/: Cargo.toml
dharitri-wasm/: Cargo.toml
dharitri-wasm/src/: err_msg.rs  lib.rs  macros.rs
dharitri-wasm/src/api/: blockchain_api.rs  call_value_api.rs  send_api.rs
dharitri-wasm/src/api/managed_types/: const_handles.rs
dharitri-wasm/src/api/uncallable/: blockchain_api_uncallable.rs  call_value_api_uncallable.rs  mod.rs  send_api_uncallable.rs
dharitri-wasm/src/contract_base/wrappers/: blockchain_wrapper.rs  call_value_wrapper.rs  crypto_wrapper.rs  send_wrapper.rs
dharitri-wasm/src/storage/: storage_key.rs
dharitri-wasm/src/storage/mappers/: bi_di_mapper.rs  fungible_token_mapper.rs  linked_list_mapper.rs  non_fungible_token_mapper.rs  queue_mapper.rs  unordered_set_mapper.rs
dharitri-wasm/src/types/crypto/: message_hash_type.rs
dharitri-wasm/src/types/flags/: dct_local_role.rs  dct_token_type.rs
dharitri-wasm/src/types/heap/: h256.rs  h256_address.rs
dharitri-wasm/src/types/interaction/: arg_buffer_managed.rs  async_call.rs  callback_closure.rs  callback_closure_unmanaged_args.rs  contract_call.rs  contract_deploy.rs
dharitri-wasm/src/types/io/: operation_completion_status.rs
dharitri-wasm/src/types/managed/: managed_ref.rs
dharitri-wasm/src/types/managed/basic/: big_int.rs  big_int_sign.rs  big_uint.rs  elliptic_curve.rs  managed_buffer.rs
dharitri-wasm/src/types/managed/multi_value/: async_call_result_managed.rs  dct_token_payment_multi_arg.rs
dharitri-wasm/src/types/managed/wrapped/: dct_token_payment.rs  managed_address.rs  managed_byte_array.rs  managed_vec.rs  mod.rs  token_identifier.rs
(+413 files in other folders)
