[package]
name = "forwarder"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2018"
publish = false

[lib]
path = "src/forwarder_main.rs"

[dependencies.vault]
path = "../vault"

[dependencies.dharitri-wasm]
version = "0.4.8"
path = "../../../../dharitri-wasm"

[dev-dependencies.dharitri-wasm-debug]
version = "0.4.8"
path = "../../../../dharitri-wasm-debug"

