[package]
name = "proxy-test-second"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2018"
publish = false

[lib]
path = "src/proxy-test-second.rs"

[dependencies.dharitri-wasm]
version = "0.4.8"
path = "../../../../dharitri-wasm"
features = ["alloc"]

[dev-dependencies.dharitri-wasm-debug]
version = "0.4.8"
path = "../../../../dharitri-wasm-debug"
