[package]
name = "single-value-repeat-meta"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2018"
publish = false

[dependencies.single-value-repeat]
path = ".."

[dependencies.dharitri-wasm-debug]
version = "0.4.8"
path = "../../../../../dharitri-wasm-debug"
